@@ -24,3 +24,11 @@ public net.minecraft.client.renderer.BufferBuilder field_179002_n # zOffset
 # For Lost Cities
 public net.minecraft.client.gui.screen.CreateWorldScreen field_146344_y # inMoreWorldOptionsDisplay
 public net.minecraft.client.gui.screen.CreateWorldScreen field_146331_K # selectedIndex
+# for NoiseChunkGenerator:
+public net.minecraft.world.gen.NoiseChunkGenerator field_222565_l # noiseSizeX
+public net.minecraft.world.gen.NoiseChunkGenerator field_222566_m # noiseSizeY
+public net.minecraft.world.gen.NoiseChunkGenerator field_222567_n # noiseSizeZ
+public net.minecraft.world.gen.NoiseChunkGenerator field_222564_k # horizontalNoiseGranularity
+public net.minecraft.world.gen.NoiseChunkGenerator field_222563_j # verticalNoiseGranularity
+public net.minecraft.world.gen.NoiseChunkGenerator func_236086_a_(DI)Lnet/minecraft/block/BlockState; # func_236086_a_
+public net.minecraft.world.gen.NoiseChunkGenerator func_222548_a([DII)V # fillNoiseColumn
